# OpenCV-for-Beginners

day-1-basic-operations/: CMakeLists.txt  cropAndResize.cpp  datatypeConversion.cpp  readWriteDisplay.cpp  rotate.cpp  rotate.py
day-3-image-transformations/: CMakeLists.txt  homography_book.cpp  homography_book.py  perspective-correction.cpp  perspective-correction.py  utils.py  virtual-billboard.cpp  virtual-billboard.py
day-4-face-detection/: CMakeLists.txt  detectFaceDemo.cpp  detectFaceDemo.py  detectFaceSmileDemo.cpp  detectFaceSmileDemo.py
day-5-image-classification/: CMakeLists.txt  common.py  train_digits.cpp  train_digits.py
day-6-pedestrian-detection/: CMakeLists.txt  detectPedestrians.cpp  detectPedestrians.py
day-7-facial-landmark-detection/: CMakeLists.txt  facialLandmarkDetector.cpp  facialLandmarkDetector.py
